<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.expensetracker.view.MainActivity"
    android:padding="20dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilExpenseTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:boxBackgroundColor="@android:color/transparent"
        android:background="@android:color/transparent"
        android:layout_marginTop="20dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtTextExpenseTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_expense_title">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/llAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilExpenseTitle"
        android:gravity="center_vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilExpenseAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            app:boxBackgroundColor="@android:color/transparent"
            android:background="@android:color/transparent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtTextExpenseAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="@string/enter_amount">
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSelectDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/select_date"
            android:layout_marginStart="5dp"
            android:gravity="right"
            android:drawablePadding="20dp"
            android:drawableEnd="@drawable/ic_calendar"
            tools:ignore="RtlHardcoded">
        </androidx.appcompat.widget.AppCompatTextView>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llAmount"
        android:paddingVertical="20dp">

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:entries="@array/category"
            android:layout_marginStart="5dp"
            android:spinnerMode="dropdown" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:src="@drawable/ic_drop_down"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/todo" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rlSpinner"
        android:gravity="center_vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:background="@color/purple_500">
        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:background="@color/purple_500">
        </androidx.appcompat.widget.AppCompatButton>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>